Fixed paragaph now text area bug for create

--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,6 @@ cite,
 code,
 del,
 dfn,
-em,
 img,
 ins,
 kbd,
@@ -157,6 +156,20 @@ hr {
   height: 100%;
   width: 100%;
 }
+div.crd {
+  display: flex-inline;
+  position: relative;
+  height: 100%;
+}
+div.crd p#crd-desc {
+  display: inline;
+  box-sizing: border-box;
+  overflow-y: scroll;
+  max-width: 100%;
+  max-height: 100%;
+  scroll-margin-top: 4rem;
+  scroll-padding: 0.5em;
+}
 header button a {
   text-decoration: none;
 }
@@ -197,16 +210,12 @@ header button a {
   height: 100%;
 }
 .crd-desc {
-  box-sizing: border-box;
   line-height: 1.5;
   border: 1px solid black;
-  margin: 1px;
-  padding: 1px;
+  margin: 0.4em;
+  padding: 0.4em;
   width: 80%;
-  height: 35em;
-  scroll-margin: 1.4rem;
-  scroll-padding: 0.5rem;
-  overflow: auto;
+  height: 20em;
 }
 section footer {
   display: flex;
