--- a/less/global.less
+++ b/less/global.less
@@ -86,11 +86,21 @@ hr{
     height:100%;
     width:100%;
 }
+div.crd{
 
-p{
-    .crd-desc{
-        // box-sizing: border-box;
-        // width:80%;
-        // height:100%;
+   display: flex-inline;
+   position: relative;;
+   height:100%;
+    p#crd-desc{
+        display: inline;
+        box-sizing: border-box;        
+        overflow-y: scroll;
+        max-width: 100%;
+        
+        max-height:100%;
+        scroll-margin-top:4rem;
+        scroll-padding: .5em;
     }
+    
+
 }
