--- a/less/page.less
+++ b/less/page.less
@@ -50,17 +50,22 @@
         
         
     }
+    
 }
 .crd-desc{
-    box-sizing: border-box;
+   
     line-height: 1.5;
     border:1px solid black;
-    margin:1px;
+    margin:.4em;
 
-    padding:1px;
+    padding:.4em;
+
     width: 80%;
-    height:35em;
-    scroll-margin:1.4rem;
-    scroll-padding: .5rem;
-    overflow:auto;
+    // max-width:100%;
+    // max-height: 100%;
+    height:20em;
+    
+    // overflow-x:hidden;
+    // overflow-y: scroll;
+    
 }
